[package]
name = "markd"
description = "Bookmark directories for easy directory-hopping in the terminal"
repository = 'https://github.com/voltaireNoir/markd'
categories = ["command-line-utilities", "filesystem", "development-tools"]
keywords = ["cli", "utility", "bookmark", "cd", "terminal", "directories"]
authors = ["Maaz Ahmed <mzahmed95@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
exclude = ["*.png", ".github/workflows"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
colored = "2.0.0"
dirs = "5.0.1"
once_cell = "1.18.0"
serde_json = "1.0.99"
tabled = { version = "0.12.2", default-features = false, features = ["std"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
