[package]
name = "markd"
description = "Bookmark directories for easy directory-hopping in the terminal"
repository = 'https://github.com/voltaireNoir/markd'
documentation = "https://github.com/VoltaireNoir/markd/tree/main#readme"
categories = ["command-line-utilities", "filesystem", "development-tools"]
keywords = ["cli", "bookmark", "cd", "terminal", "directories"]
authors = ["Maaz Ahmed <mzahmed95@gmail.com>"]
license = "MIT"
version = "0.2.0"
edition = "2021"
exclude = ["*.png", ".github/workflows"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
colored = "2.0.0"
dirs = "5.0.1"
once_cell = "1.18.0"
serde_json = "1.0.99"
tabled = { version = "0.12.2", default-features = false, features = ["std"] }
toml = "0.8.6"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
